# setsuna-discord-bot

./: .breakpoints  .gitignore  .replit  LICENSE  README.md  StaticVars.py  main.py  pyproject.toml  requirements.txt  restart.py
admin/: ReloadCogs.py
ai/: AlterText.py  Chat.py  GenerateImg.py
anime/: Aniadd.py  Anidel.py  Anifav.py  Anigacha.py  Anigive.py  Anirank.py  Anitrade.py
chatbot/: Chat.py
currency/: Addgold.py  Addplat.py  Convert_from_cs.py  Convert_to_gold.py  Convert_to_plat.py  Giveawaygold.py  Giveawayplat.py  Reducegold.py  Reduceplat.py  Transfergold.py  Transferplat.py
data/: Addxp.py  Changebio.py  Profile.py  Regist.py  Register.py  Registfor.py
events/: archived.py  error.py  song.py
fun/: Diss.py  Hug.py  Lyrics.py  Meme.py  Pat.py  Pedo.py  Wink.py
game/: Blackjack.py  Dailymaze.py  Gamblegold.py  Gambleplat.py  Hunt.py  RPS.py  Spygame.py
misc/: Anihelp.py  ChatAI.py  Help.py  Pokehelp.py  RNG.py  Setsuhelp.py  Songhelp.py  Spyhelp.py  Timer.py
poke/: Pokecatch.py  Pokeduel.py  Pokeinfo.py  Pokepartner.py  Pokepity.py  Pokerank.py  Poketype.py
song/: Songbye.py  Songclear.py  Songinsert.py  Songinsertto.py  Songpanel.py  Songremove.py  Songseek.py  Songskip.py  Songstop.py  Songtopinsert.py
utility/: Checkping.py  Resethunt.py  Resetmaze.py
